yoshimi 1.5.11 M

2019-7-9 Will
* NRPN for load from history now includes MIDI learn.
* Found more magic numbers to convert in Resonance.
* Improved Resonance CLI responses.

2019-7-8 Will
* Resolved potential ambiguity in GUI switch switch exit.

2019-7-1 Will
* Implemented non-destructive system effect on/off.
* Updated docs.
* Some code cleanups.
* Replaced more numbers with labels.
* Added 0059 Rich Bass to Companion bank

2019-6-27 Will
* BugFix: GUI not exporting banks.
  CLI was working fine.
* Improved some bank error reports.
* Made most filemanager methods static.
  Used static calls instead of class in bank.
* Most calls to bank now require implicit bank/root.

2019-6-27 Will
* Removed remaining bank message transfer conversions.

2019-6-26 Will
* Added in missing new files :(
* Refinements to data->text conversions.
  Specifically so that MIDI-learn text doesn't include
  the current value or such as 'on/off' responses.
* Removed some bank message transfer conversions.
  These are now entirely within one low priority context
  so there is no need to use miscMsg functions.
* Added copyright notices to Data2Text files.

2019-6-25 Will
* Moved data->text conversions to new file 'Data2Text'.

2019-6-24 Will
* Swapped menu entry Yoshimi/MIDI Learn ~ button-Reports.
* Improved MIDI-Learn internal links.
* Partially separated text replies from respondents.
* BugFix: voicelist enable calling MIDI_learn.

2019-6-22 Will
* Clarifed system mute controls.
  Also added extra sanity checks.
* Implemented new NRPN for load from history.
  Not MLearn yet and Instruments only 16 parts.
* Updated NRPN docs.
* Improved history NRPNs.
  Easier to use and greater flexibilty.
* Updated docs (again!).

2019-6-21 Will
* Revised message handling in indirectTransfers(
  More compact and easier to adjust.

2019-6-20 Will
* Implemented recent file history locking.
  Currently CLI only.
* Improved string list searches.
* Completed locking including GUI controls.