@@ -110,9 +110,8 @@ class Bank : private MiscFuncs, FileMgr
     public:
         Bank(SynthEngine *_synth);
         ~Bank();
-        string getname(unsigned int ninstrument, size_t bank = 0xff, size_t root = 0xff);
-        string getfilename(unsigned int ninstrument);
-        string getnamenumbered(unsigned int ninstrument);
+        string getname(unsigned int ninstrument, size_t bank, size_t root);
+        string getnamenumbered(unsigned int ninstrument, size_t bank, size_t root);
         bool setname(unsigned int ninstrument, string newname, int newslot, size_t oldBank = 0xff, size_t newBank = 0xff, size_t oldRoot = 0xff, size_t newRoot = 0xff);
              // if newslot==-1 then this is ignored, else it will be put on that slot
 
