@@ -1646,7 +1646,11 @@ Nikita Zlobin
             if((parameter & 0x30) == panelgroup)
                 panellistitem[parameter % NUM_MIDI_CHANNELS]->setPartLabel(parameter);
             if (kititem == synth->ReadBankRoot() && engine == synth->ReadBank())
-                bankui->refreshbankslot(insert);
+            {
+                int bk = fetchData(0, BANK::control::selectBank, TOPLEVEL::section::bank);
+                int rt = fetchData(0, BANK::control::selectRoot, TOPLEVEL::section::bank);
+                bankui->refreshbankslot(insert, bk, rt);
+            }
         break;
 
         case MAIN::control::saveNamedInstrument: // save instrument
